[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/level/LevelTemplatetembus.tres" type="TileSet" id=1]
[ext_resource path="res://src/object/failingplatform.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28, 7.375 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, -3 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "shake"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, -3 ), Vector2( 5, -3 ), Vector2( -5, -3 ) ]
}

[node name="failingplatform" type="KinematicBody2D"]
position = Vector2( 1, -3 )
script = ExtResource( 2 )
gravity = 3

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 1, -3 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 15 )
format = 1
tile_data = PoolIntArray( 65534, 7, 0, 65535, 8, 0, 0, 8, 0, 1, 9, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 1 )
one_way_collision = true

[node name="resetTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/shake = SubResource( 3 )

[connection signal="timeout" from="resetTimer" to="." method="_on_resetTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
